# b2b

./: .gitignore  README.md  flutter_jank_metrics_01.json  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: base64.h  checker.cpp  checker.h  clib.h  entries.cpp  entries.h  lib.cpp
android/app/src/main/java/com/djezzy/b2b/internet/: AppDelegate.java  Constants.java  MainActivity.java
android/app/src/main/res/drawable/: launch_background.xml
android/app/src/main/res/values/: styles.xml
android/app/src/main/res/values-night/: styles.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_test.dart
lib/l10n/: app_ar.arb  app_fr.arb
lib/src/assets/: colors.dart  styles.dart  themes.dart
lib/src/controllers/: add_company_controller.dart  base_controller.dart  companies_controller.dart  companies_form_controller.dart  current_user_company_controller.dart  edit_company_controller.dart  faq_controller.dart  fleet_dialog_controller.dart  invoices_controller.dart  navigation_controller.dart  splash_controller.dart
lib/src/exceptions/: api_exceptions.dart  bad_request_exception.dart  not_found_exception.dart  unauthorized_exception.dart
lib/src/helpers/: alert_helper.dart  routes.dart  text_helper.dart
lib/src/languages/: ar.dart  en.dart  fr.dart  (+2 more)
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/runner/: Runner.rc
(+129 files in other folders)
